# Installer

./: .gitignore  .releaserc  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  vcpkg-configuration.json  vcpkg.json  version
.github/workflows/: ci.yml
docs/: CHANGELOG.md
include/: components.h  dpi.h  http.h  memory.h  renderer.h  router.h  task_scheduler.h  texture.h  theme.h  util.h  wndproc.h
resources/cmake/: bootstrap_deps.cmake
resources/versioning/: .releaserc  version  version.ps1
src/: animate.cc  dpi.cc  main.cc  renderer.cc  router.cc  semver.cc  texture.cc  updater.cc  wndproc.cc
src/components/: bottombar.cc  checkbox.cc  message.cc  titlebar.cc
src/include/: animate.h  cjk_names.h  components.h  dpi.h  http.h  i18n.h  memory.h  renderer.h  task_scheduler.h  texture.h  texture.hh  unzip.h  updater.h  util.h  viet_name.h  wndproc.h  worker.h
src/installer/: task_scheduler.cc  unzip.cc
src/locales/: brazilian.json  bulgarian.json  danish.json  dutch.json  english.json  french.json  german.json  hungarian.json  indonesian.json  italian.json  japanese.json  koreana.json  latam.json  polish.json  russian.json  schinese.json  spanish.json  swedish.json  tchinese.json  turkish.json  ukrainian.json  vietnamese.json
src/routes/: home.cc  install_prompt.cc  installer.cc  router.cc  uninstall_select.cc
src/util/: animate.cc  locale.cc  semver.cc  updater.cc  worker.cc
src/window/: dpi.cc  renderer.cc  texture.cc  wndproc.cc
tools/: generate_font_headers.py
win32/: Installer.rc
